Allow CORS for nhungmov.vercel.app with credentials